force-app/main/default/objects/Lead/fields/Auto_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Reason__c</fullName>
    <label>Auto Close Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>