force-app/main/default/objects/Lead/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <description>A Placeholder for closure reason, to track and audit.</description>
    <label>Closure Reason</label>
    <type>TextArea</type>
</CustomField>