force-app/main/default/objects/Lead/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Stamped by LeadTrigger only when Status or Owner changes, so inactivity tracking reflects real activity instead of every system touch to the record.</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>