force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AQUAFINA Single Bottle</fullName>
            </value>
            <value>
                <fullName>AQUAFINA Pack Of 5 Bottles</fullName>
            </value>
            <value>
                <fullName>AQUAFINA Pack Of 10 Bottles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>