force-app/main/default/objects/Lead/validationRules/Qualified_Before_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualified_Before_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>IsConverted = TRUE &amp;&amp; ISPICKVAL(Status, &quot;Qualified&quot;) = FALSE</errorConditionFormula>
    <errorMessage>Lead must be Qualified before conversion.</errorMessage>
</ValidationRule>