force-app/main/default/objects/Lead/listViews/France_Leads.listView-meta.xml
<ListView>
    <fullName>France_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>FR</value>
    </filters>
    <label>French Leads</label>
    <sharedTo>
        <role>Sales_Operations_Director_France</role>
    </sharedTo>
</ListView>